--- a/05_HTML5/10_jQueryDOM.html
+++ b/05_HTML5/10_jQueryDOM.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -57,6 +56,7 @@
                 </li>
             </ul>
         </nav>
+        <nav id="otro_menu">Otro menú</nav>
     </header>
 
     <section>
@@ -69,11 +69,12 @@
             <section>una parte del articulo</section>
             <section>otra parte del articulo</section>
         </article>
+        <article>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque sunt quasi, nemo et inventore, modi saepe nostrum delectus laborum quos expedita porro quod temporibus ab quaerat veritatis eligendi accusantium ipsam.
+        </article>
     </section>
     <script src="jsjQuery/jquery-3.4.1.js"></script>
     <script src="jsjQuery/10_jQueryDOM.js"></script>
 </body>
 
 </html>
-
-
